package org.java7.api.entity;

public enum Database {
    ORACLE,
    POSTGRESQL,
    DB2,
    SQL_SERVER,
    MY_SQL
}
