package org.java7.api.entity;

public enum ProgrammingLanguage {
    JAVA,
    JAVASCRIPT,
    PL_SQL,
    HTML5,
    CSS
}
